2004-12-7  Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/common.mk: tiny tidyup

	* tools/c2hs/chs/CHS.hs: apply old patch to our new c2hs, makes c2hs
	deal with hierarchical module names.

	* tools/c2hs/gen/GenBind.hs: apply old patch to our new c2hs, fix
	handling of typedef'ed C types. Needed for SourceMarker.chs.

	* gconf/System/Gnome/GConf/GConfClient.chs,
	gconf/System/Gnome/GConf/GConfValue.chs: make these work with our
	current version of c2hs. It's not entirely obvious to me if this is
	an improvement in c2hs or a regression. Could do with investigating.

2004-12-02  Jens Petersen  <petersen@haskell.org>

	* configure.ac: Use modern invocation of AC_INIT with name and
	version.  Call AM_INIT_AUTOMAKE without args.  No longer override
	VERSION variable with VERSION file.

	* Makefile.am (EXTRA_DIST): No longer include VERSION file.
	Add "tools/checkDirs.sh".

2004-12-01 Axel Simon <A.Simon@kent.ac.uk> 

	* gtk/menuComboToolbar/Toolbar.chs.pp: Removed two slashes that
	confused haddock.

	* mk/common.mk: Build the package with the correct name, not the
	name of the package file. Removed a bogus variable during linking.
	
2004-11-28 Axel Simon <A.Simon@kent.ac.uk> 

	* Makefile.am: Add all _stub.o files as library dependencies. This
	seems to be enough to link the stub files into the archive.
	
	* tools/c2hs/base/sysdep/SysDep([GN]HC?|Posix{UN}AVAIL).hs: Tie
	SysDep.hs and SysDepPosix.hs directly to the GHC 6 versions.
	
	* gtk/gtk2hs.pkg: Package file for gtk2hs.

	* configure.ac, tools/checkDir.sh: Determine CFLAGS and LDFLAGS
	for each of the libraries, in particular remove directories that
	are already present in Gtk from more derived libraries.

	* Makefile.am, mk/common.mk: Add a new goal for calculating
	dependencies for Haskell files. This new target allows the
	recursive invocation with the name of the library/application for
	which dependencies are generated. This allows for choosing the